--- a/index.html
+++ b/index.html
@@ -106,31 +106,8 @@
     <section id="blog" class="blog">
       <div class="inner">
         <h2 class="title">RECENT POSTS</h2>
-        <div class="blog-grid">
-          <article class="blog-item">
-            <div class="blog-img"></div>
-            <div class="blog-content">
-              <h3>React 18의 새로운 기능들</h3>
-              <p>React 18에서 추가된 Concurrent Features와 Suspense의 활용법에 대해 알아봅니다.</p>
-              <span class="date">2025.03.15</span>
-            </div>
-          </article>
-          <article class="blog-item">
-            <div class="blog-img"></div>
-            <div class="blog-content">
-              <h3>TypeScript 베스트 프랙티스</h3>
-              <p>실무에서 TypeScript를 효과적으로 사용하기 위한 팁과 패턴들을 정리했습니다.</p>
-              <span class="date">2025.03.10</span>
-            </div>
-          </article>
-          <article class="blog-item">
-            <div class="blog-img"></div>
-            <div class="blog-content">
-              <h3>AWS 서버리스 아키텍처</h3>
-              <p>Lambda와 API Gateway를 활용한 서버리스 백엔드 구축 경험을 공유합니다.</p>
-              <span class="date">2025.03.05</span>
-            </div>
-          </article>
+        <div class="blog-grid" id="blog-grid">
+          <div class="loading">Loading posts...</div>
         </div>
       </div>
     </section>
@@ -139,31 +116,8 @@
     <section id="projects" class="projects bg--black">
       <div class="inner">
         <h2 class="title">PROJECTS</h2>
-        <div class="project-grid">
-          <div class="project-item">
-            <div class="project-img"></div>
-            <div class="project-info">
-              <h3>E-Commerce Platform</h3>
-              <p>React, Node.js, MongoDB를 사용한 풀스택 쇼핑몰</p>
-              <div class="tech-stack">
-                <span>React</span>
-                <span>Node.js</span>
-                <span>MongoDB</span>
-              </div>
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-img"></div>
-            <div class="project-info">
-              <h3>Task Management App</h3>
-              <p>팀 협업을 위한 실시간 태스크 관리 애플리케이션</p>
-              <div class="tech-stack">
-                <span>Next.js</span>
-                <span>Socket.io</span>
-                <span>PostgreSQL</span>
-              </div>
-            </div>
-          </div>
+        <div class="project-grid" id="project-grid">
+          <div class="loading">Loading projects...</div>
         </div>
       </div>
     </section>
